# palimpsest

./: .gitignore  README.md  pyproject.toml
examples/: agent_loop.py
palimpsest/: __init__.py  cli.py  contradiction.py  episodic.py  forgetting.py  mcp.py  memory.py  prompts.py  providers.py  schemas.py  semantic.py  store.py  subject.py
tests/: conftest.py  test_anthropic_integration.py  test_cli.py  test_confidence_decay.py  test_consolidation.py  test_contradiction.py  test_day1_core.py  test_edge_cases.py  test_episodic.py  test_examples.py  test_gemini_integration.py  test_mcp.py
