[project]
name = "palimpsest"
version = "0.0.1"
description = "Contradiction-aware agent memory with provenance-preserving forgetting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Asmit Dash" }]
dependencies = [
    "pydantic>=2.9.0",
    "sqlite-vec>=0.1.6",
    "google-genai>=0.3.0",
    "anthropic>=0.40.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
palimpsest = "palimpsest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["palimpsest"]

[tool.ruff]
line-length = 100
target-version = "py311"
